--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>sass 255</title>
+    <title>Ice-Cream Divs</title>
+    <link rel="shortcut icon" href="assets/icecream.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
